--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -10,11 +10,12 @@ RUN apt-get update -y && \
     locale-gen en_US.UTF-8 && \
     add-apt-repository -y ppa:openjdk-r/ppa && \
     apt-get update -y && \
-    apt-get install -y openjdk-8-jre openjdk-11-jre openjdk-16-jre && \
+    apt-get install -y openjdk-8-jre openjdk-11-jre openjdk-16-jre openjdk-17-jre && \
     rm -rf /var/lib/apt/lists/* && \
     ln -s /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java /usr/local/bin/java8 && \
     ln -s /usr/lib/jvm/java-11-openjdk-amd64/bin/java /usr/local/bin/java11 && \
     ln -s /usr/lib/jvm/java-16-openjdk-amd64/bin/java /usr/local/bin/java16 && \
+    ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /usr/local/bin/java17 && \
     useradd -d /home/container -m container
 
 USER container
@@ -24,4 +25,4 @@ WORKDIR /home/container
 
 COPY ./prompt.py /prompt.py
 COPY ./entrypoint.sh /entrypoint.sh
-CMD ["/bin/bash", "/entrypoint.sh"]
+CMD [ "/bin/bash", "/entrypoint.sh" ]
